--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -6,22 +6,34 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin: auto;
+  border: 8px solid white;
 }
 
 .title {
+  margin: 0px 0px 8px 0px ;
+  font-size: 16px;
   background: #e3f4ff;
+  padding: 8px;
+
 }
 
 .content {
   background: #e3f4ff;
+  margin: 0px 0px 8px 0px ;
+  padding: 16px 8px 16px 8px;
 }
 
 .button-container {
   background: #e3f4ff;
+  padding: 8px;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  padding: 8px 24px 8px 24px;
+  display: block;
+  margin: 0 auto;
 }
