--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,7 +1,22 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  height: 100px;
+  align-items: center;
+  justify-content: center;
 }
+
+.left-links {
+  flex-grow: 1;
+}
+
+.right-links {
+  flex-grow: 1;
+}
+.right-links ul{
+  justify-content: flex-end;
+} 
 
 .logo {
   font-size: 48px;
@@ -11,9 +26,14 @@
   padding: 4px 32px;
 }
 
+
+
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  padding: 0px 10px;
+  display: flex;
+  gap: 20px;
 }
 
 a {
