--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,17 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+
+}
+
+.right-side {
+  display: flex;
+  flex-grow: 1;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 20px;
 }
 
 .profile-image {
@@ -20,6 +31,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  justify-self: flex-end;
 }
 
 .logo {
@@ -45,4 +57,6 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 20px;
 }
